# rosalind

./: .clang-format  .clang-tidy  .cproject  .gitignore  .project  CMakeLists.txt  README.md  default.nix  generate.sh  rosalind.nix  shell.nix
dna/: CMakeLists.txt
dna/src/: CMakeLists.txt  dna.cpp  dna.hpp  main.cpp
dna/test/: CMakeLists.txt  dna_test.cpp
lib/catch2/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
src/dna/: CMakeLists.txt  rosalind_dna.txt
src/dna/include/: dna.hpp
src/dna/src/: dna.cpp
src/dna/test/: dna_test.cpp
src/main/: CMakeLists.txt
src/main/src/: main.cpp
src/options/: CMakeLists.txt
src/options/include/: options.hpp
src/options/src/: options.cpp
src/revc/: CMakeLists.txt  rosalind_revc.txt
src/revc/include/: revc.hpp
src/revc/src/: revc.cpp
src/revc/test/: revc_test.cpp
src/rna/: CMakeLists.txt  rosalind_rna.txt
src/rna/include/: rna.hpp
src/rna/src/: rna.cpp
src/rna/test/: rna_test.cpp
src/subs/: CMakeLists.txt  rosalind_subs.txt
src/subs/include/: subs.hpp
src/subs/test/: subs_test.cpp
